# robotILITS

./: README.md
install/: local_setup.sh  setup.sh
install/controller/share/ament_index/resource_index/package_run_dependencies/: controller
install/controller/share/ament_index/resource_index/parent_prefix_path/: controller
install/controller/share/controller/: local_setup.sh  package.sh
install/interfaces/include/interfaces/interfaces/msg/: command.hpp
install/interfaces/include/interfaces/interfaces/msg/detail/: command__builder.hpp  command__functions.c  command__rosidl_typesupport_fastrtps_cpp.hpp  command__rosidl_typesupport_introspection_c.h  command__rosidl_typesupport_introspection_cpp.hpp  command__struct.h  command__struct.hpp  command__traits.hpp  command__type_support.h  command__type_support.hpp
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/interfaces/share/interfaces/cmake/: export_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  interfaces__rosidl_typesupport_cExport.cmake  interfaces__rosidl_typesupport_cppExport.cmake  interfaces__rosidl_typesupport_introspection_cExport.cmake  interfaces__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build  latest_list
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp
src/gazebo-sim/: CMakeLists.txt  package.xml
src/gazebo-sim/description/: inertial.xacro  mahasura.xacro  thruster.xacro
src/ilits_launch/: CMakeLists.txt  package.xml
src/ilits_launch/launch/: controller.launch.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Command.msg  ObjectCommand.msg
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/include/object_detection/: constants.h  yolov5.h
src/object_detection/src/: constants.cpp  detect_node.cpp  yolov5.cpp
src/serialcom/: CMakeLists.txt  package.xml
src/stm32-comm/: CMakeLists.txt  package.xml
src/stm32-comm-test/: CMakeLists.txt  package.xml
src/stm32-comm-test/src/: comm.cpp
src/stm32-comm/src/: ros-stm.cpp
