<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="erlanggarizqidwi@gmail.com">erzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>interfaces</depend>

  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>
  <build_depend>openvino</build_depend>
  <exec_depend>openvino</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
